Fixes for various layout issues, columns are now 50% wide, and inner table is always 100% wide taking scroll-bars into account.

--- a/web/css/scrums.css
+++ b/web/css/scrums.css
@@ -37,9 +37,9 @@ table.dataTable td {
 
 div.scrollTableContainer {
     height: 445px;  
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     margin: 15px 0 0 0;
-    width: 90%;
     border: 1px solid #ddd;
 }
 
